--- a/views/definitions.erb
+++ b/views/definitions.erb
@@ -1,5 +1,5 @@
-<h1><%= @vehicle %></h1>
-<h1><%= @vehicle.define() %></h1>
+<h1><%= @word %></h1>
+<h1><%= @word.define() %></h1>
 
 <a href="/word/new">Add New Word</a>
 <a href="/">Home</a>
