remote save to protect work

--- a/views/success.erb
+++ b/views/success.erb
@@ -1,3 +1,7 @@
 <h1>The word has been successfully been added to the library</h1>
 
-<p><a href="/" >Back</a></p>
+<p><a href="/" >Back to Home</a></p>
+
+<p><a href="/words" >Back Word list</a></p>
+
+<p><a href="/word/new" >Add another word</a></p>
