--- a/views/success.erb
+++ b/views/success.erb
@@ -4,4 +4,4 @@
 
 <p><a href="/words" >Back Word list</a></p>
 
-<p><a href="/word/new" >Add another word</a></p>
+<p><a href="/words/new" >Add another word</a></p>
