--- a/views/words.erb
+++ b/views/words.erb
@@ -2,6 +2,11 @@
 
 <ul>
   <% @words.each() do |word| %>
-  <li><a href="/words/<%=word.id() %>"<%= word.word() %></a></li>
+  <li><%= word.word() %></a></li>
   <% end %>
 </ul>
+
+<p>
+  <a href="/word_definition_form/new">Add a new Definition</a>
+
+<p><a href="/" >Back to Home</a></p>
