add a definition page for user to see definitions of the word

--- a/views/words.erb
+++ b/views/words.erb
@@ -6,6 +6,7 @@
   <% end %>
 </ul>
 
+<a href="/definitions"> See list of definitions</a>
 <p>
   <a href="/word_definition_form/new">Add a new Definition</a>
 
