--- a/views/words.erb
+++ b/views/words.erb
@@ -2,12 +2,12 @@
 
 <ul>
   <% @words.each() do |word| %>
-  <li><%= word.word() %></a></li>
+  <li><a href="/words/<% word.id()%>"<%= word.word() %></a></li>
   <% end %>
 </ul>
 
 <a href="/definitions"> See list of definitions</a>
-<p>
-  <a href="/word_definition_form/new">Add a new Definition</a>
+
+<a href="/word_definition_form/new">Add a new Definition</a>
 
 <p><a href="/" >Back to Home</a></p>
