--- a/views/words.erb
+++ b/views/words.erb
@@ -4,6 +4,6 @@
 
 <ul>
   <% @words.each() do |word| %>
-  <li><a href="/word/<% word.id()%>"><%= word.word() %></a></li>
+  <li><a href="/word/<%= word.id() %>"><%= word.word() %></a></li>
   <% end %>
 </ul>
