add definitions to individual words

--- a/views/word_definition_form.erb
+++ b/views/word_definition_form.erb
@@ -1,6 +1,6 @@
-<h1>Add a definition to <%= @word %></h1>
+<h1>Add a definition to <%= @word.word() %></h1>
 
-<form action="/definitions/>" method="post">
+<form action="/definitions" method="post">
 
   <label for="definition"></label>
   <input type="text" name="definition" value="">
