--- a/views/word.erb
+++ b/views/word.erb
@@ -1,4 +1,21 @@
 
 <h1><%= @word.word() %></h1>
 
-<a href="/word_definition_form/>">Add a Defition for <%= @word.word() %></a>
+
+
+<ol>
+<% @word.definitions().each() do |definition| %>
+  <li><%= definition.definition() %></li>
+<% end  %>
+</ol>
+
+<h1>Add a definition to <%= @word.word() %></h1>
+
+<form action="/definitions/" method="post">
+  <input type="hidden" name="word_id" value="<%= @word.id() %>">
+  <label for="definition"></label>
+  <input type="text" name="definition" value="">
+
+  <button type="submit">Add definition to Word</button>
+
+</form>
