add simpler code.

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,4 +3,8 @@
 
 
 
-<a href="/words/new">Add a new word</a>
+<button><a href="/words/new">Add a new word</a></button>
+
+
+
+<button><a href="/words">Word Bank</a></button>
