--- a/views/word.erb
+++ b/views/word.erb
@@ -19,3 +19,9 @@
   <button type="submit">Add definition to Word</button>
 
 </form>
+
+<a href="/">Home</a>
+
+<a href="/words">Word Bank</a>
+
+<a href="/words/new">Add a new word</a>
