--- a/views/words_form.erb
+++ b/views/words_form.erb
@@ -2,6 +2,9 @@
   <label for="word">Fill in a word</label>
   <input type="text" name="word">
 
-
   <button type="submit">Add the Word</button>
 </form>
+
+<a href="/">Home</a>
+
+<a href="/words">Word Bank</a>
